--- a/index.html
+++ b/index.html
@@ -2,56 +2,25 @@
 <html>
 <head>
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src="./js/turn.min.js"></script>
 
-<style type="text/css">
-body{
-	background:#FFFFFF;
-}
-#magazine{
-	width:1152px;
-	height:752px;
-}
-#magazine .turn-page{
-	background-color:#FFFFFF;
-	background-size:100% 100%;
-}
-</style>
 </head>
 <body>
 
-<div id="magazine">
-    <div style="background-image:url(images/couverture.jpg);"></div>
-    <div>Sommaire
-    </br>
-        <a href="#noteauteur" onclick="goToPage(3)">Notes sur l'auteur</a>
-    </br>
-        <a href="#citation" onclick="goToPage(4)">Citation</a>
+<div id="citation">
 
-
-    </div>
-    <div id="noteauteur">Note sur l'auteur
-
-    </div>
-    <div id="citation">Citation</div>
 </div>
 
 
 <script type="text/javascript">
+	var showText = function (target, message, index, interval) {   
+  		if (index < message.length) {
+    		$(target).append(message[index++]);
+    		setTimeout(function () { showText(target, message, index, interval); }, interval);
+  		}
+	}
 
 	$(window).ready(function() {
-		$('#magazine').turn({
-							display: 'single',
-                            autoCenter: true,
-							acceleration: true,
-							gradients: !$.isTouch,
-                            height:document.body.scrollHeight,
-							when: {
-								turned: function(e, page) {
-									/*console.log('Current view: ', $(this).turn('view'));*/
-								}
-							}
-						});
+		showText("#citation", "Ici ta super citation d'Ovide", 0, 500);   
 	});
 	function goToPage(numPage){
         $("#magazine").turn("page", numPage);
